@@ -15,7 +15,7 @@ LDFLAGS = -Wl -D,__HIMEM__=0xBF00
 
 include fnlib_platforms.mk
 
-FUJINET_LIB_VERSION := 3.0.3
+FUJINET_LIB_VERSION := 4.1.1
 FUJINET_LIB = $(OBJDIR)/_libs
 FUJINET_LIB_VERSION_DIR = $(FUJINET_LIB)/$(FUJINET_LIB_VERSION)-$(CURRENT_PLATFORM)
 FUJINET_LIB_PATH = $(FUJINET_LIB_VERSION_DIR)/fujinet-$(CURRENT_PLATFORM)-$(FUJINET_LIB_VERSION).lib
