@@ -1,4 +1,4 @@
-FUJINET_LIB_VERSION := 4.1.0
+FUJINET_LIB_VERSION := 4.1.1
 
 FUJINET_LIB = $(OBJDIR)/_libs
 FUJINET_LIB_VERSION_DIR = $(FUJINET_LIB)/$(FUJINET_LIB_VERSION)-$(CURRENT_TARGET)
